[tool.poetry]
name = "servo-rollouts"
version = "0.1.0"
description = "Opsani Servo plugin for triggering ArgoCD Rollouts controller"
authors = ["Robert Starmer <robert@opsani.com>","Fred Sharp <fred@kumul.us>"]
license = "BSD-3-Clause"

packages = [
    { include = "adjust" },
]
include = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.3"
requests = "^2.23"
kubernetes = "^11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
